media_bynder.css
form#media-bynder-add {
    margin: 0;
}

#edit-bynder-search {
    padding: 0;
    overflow: hidden;

    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    margin: 0;
}

#edit-bynder-search a {
    color: #1ca0de;
}

#edit-bynder-search ul {
    margin: 0;
}
#edit-bynder-search ul li {
    list-style-type: none;
}

#edit-bynder-search a:hover {
    color: #148fc8;
    text-decoration: none;
}

#edit-bynder-search .fa-caret-right:before {
    display:none;
}

#edit-bynder-search .fieldset-wrapper {
    padding: 1em;
    padding-top: 0;
}

#edit-bynder-search .bynder-search-form .fieldset-wrapper {
    position: relative;
    margin: 0 -25px;
    padding: 1em 2em;
    border-bottom: 1px solid #ddd;
    background-color: #f9f9f9;
}

#edit-bynder-search input.form-text {
    padding: 10px;

    border: 1px solid #ccc;
    -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
            border-radius: 3px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

#edit-bynder-search input.form-text:focus {
    border-color: rgba(82, 168, 236, 0.8);
    outline: 0;
    outline: thin dotted \9;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(82,168,236,0.6);
            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
}

#edit-bynder-search .form-item label {
    margin-bottom: 10px;
}

#edit-bynder-search .bynder-search-form {
    margin:0;
}

#edit-bynder-search .bynder-search-form legend {
    text-align:right;
}

#edit-bynder-search .bynder-search-form .form-type-textfield {
    display: inline-block;
}

#edit-bynder-search .normal-facet-list-wrapper {
    display:inline-block;
    margin: 0.5em 0;
}

#edit-bynder-search h3 {
    font-size: 16pt;
    margin: 0 0 0.25em;
}

#edit-bynder-search .item-list {
    clear:both;
}

#edit-bynder-search .item-list:before,
#edit-bynder-search .item-list:after,
#edit-bynder-search .item-list .facet_list:after,
#edit-bynder-search .item-list .facet_list:before {
    display: inline-block;
}

#edit-bynder-search .item-list:after,
#edit-bynder-search .item-list .facet_list:after {
    clear: both;
}

#edit-bynder-search .item-list .facet_list {
    padding-left: 0;
}

#edit-bynder-search .item-list .facet_list .facet_title {
  max-height: 290px;
}

#edit-bynder-search .item-list .facet_list .facet_title > .item-list ul {
    padding:1em;
    vertical-align:top;
    margin-top: -1.2em;
}

#edit-bynder-search ul ul {
  overflow-y: auto;
}

#edit-bynder-search .item-list .facet_list .facet_title ul li {
    position: relative;

    height: 30px;
    margin-bottom: 5px;
    padding: 0;

    line-height: 30px;

    border: 1px solid #ddd;
    -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
            border-radius: 3px;
    background-color: transparent;
}

#edit-bynder-search .item-list .facet_list .facet_title ul li:hover {
    border-color: #ccc;
    background-color: #f9f9f9;

    cursor: pointer;
}

#edit-bynder-search .item-list .facet_list .facet_title ul li a {
    display: block;
    padding-right: 45px;
    padding-left: 10px;
    overflow: hidden;

    white-space: nowrap;
    text-overflow: ellipsis;
}

#edit-bynder-search .item-list .facet_list .facet_title ul li a.active {
    color: #fff;

    background-color: #148fc8;
}

#edit-bynder-search .item-list .facet_list .facet_title ul li .count {
    position: absolute;
    top: 0;
    right: 10px;

    color: #ccc;
}

#edit-bynder-search .item-list .facet_list .facet_title ul li a:hover {
    text-decoration: underline;
}

#edit-bynder-search .item-list .facet_list > .facet_title {
    display: inline-block;
    margin: 0 1em 0 0;


    list-style-type: none;
    cursor: pointer;
}

#edit-bynder-search .item-list .facet_list .facet_title > .item-list {
    position: absolute;
    z-index: 10;

    display: none;
    overflow: hidden;

    background-color: #fff;
    border-radius: 0 0 3px 3px;
    border: solid thin #ddd;
}

#edit-bynder-search .item-list .facet_list .facet_title > span {
    margin-bottom: 10px;
    font-weight: bold;
}

#edit-bynder-search .item-list .facet_list .facet_title > span .expand {
  float: right;
  font-size: 20px;
  padding: 0 0.5em;
}

#edit-bynder-search .item-list .selected_facet_list .facet_title > span {
    padding: 0.5em;
    border: solid thin #ddd;
    background:#eee;
}

#edit-bynder-search .item-list .selected_facet_list .facet_title > span .expand {
    padding:0;
    margin-left:0.5em;
}

#edit-bynder-search input.form-submit {
    margin: 0.25em 1em;
    display: inline-block;
    padding: 0.5em 1em;

    color: #fff;

    border: 1px solid #148fc8;
    -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
            border-radius: 3px;
    background: #1ca0de;
    -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,0.1);
       -moz-box-shadow: inset 0 -2px 0 rgba(0,0,0,0.1);
            box-shadow: inset 0 -2px 0 rgba(0,0,0,0.1);
}

#edit-bynder-search input.form-submit:hover {
    background-color: #148fc8;
}

#edit-bynder-search input.form-submit:active {
    color: #fff;
    text-shadow: 0 0 0 transparent;
}

#edit-bynder-search input.form-submit:focus,
#edit-bynder-search input.form-submit:focus:hover {
    color: rgba(255,255,255,0.5);

    outline: none;
    background-color: #148fc8;
}

#edit-bynder-search .item-list .result_list li {
    display: inline-block;
    margin: 0.5em 0.25em;   min-width: 230px;
}

#edit-bynder-search .item-list .result_list {
    margin-bottom: 20px;
    padding: 20px 0;

    text-align: center;

    border: 1px solid #ddd;
    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    background-color: #f9f9f9;
    -webkit-box-shadow: inset 0 2px 0 rgba(0,0,0,0.05);
       -moz-box-shadow: inset 0 2px 0 rgba(0,0,0,0.05);
            box-shadow: inset 0 2px 0 rgba(0,0,0,0.05);
}

#edit-bynder-search .item-list .result_list li a {
    position: relative;

    display: block;
    max-width: 200px;
    padding: 1em;

    color: #444;
    text-align: center;

    border: 1px solid #ddd;
    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    background: #fff;
    -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.05);
       -moz-box-shadow: 0 2px 0 rgba(0,0,0,0.05);
            box-shadow: 0 2px 0 rgba(0,0,0,0.05);
}

#edit-bynder-search .item-list .result_list li a.loading .image-holder,
#edit-bynder-search .item-list .result_list li a.loading .media_object_type_image {
    opacity: 0.5;
}

#edit-bynder-search .item-list .result_list li a:hover {
    padding: 14px;

    color: #1ca0de;

    border-width: 2px;
    border-color: #1ca0de;
}

#edit-bynder-search .item-list .result_list li a .image-holder {
    height: 120px;
    margin-bottom: 1em;
    overflow: hidden;

    -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
            border-radius: 3px;
    background-color: #f9f9f9;
}

#edit-bynder-search .item-list .result_list li a span {
    display: block;
    width: 200px;
    height: 20px;
    overflow: hidden;

    line-height: 20px;
    text-align: left;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#edit-bynder-search .item-list .result_list li a img {
    max-width: 200px;
    min-height: 100%;
    max-height: 100%;
}

.alert {
    position: absolute;
    top: 25px;
    right: 20px;

    padding: 15px;

    border: 1px solid transparent;
    -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
            border-radius: 4px;
}

.alert-warning {
    font-size: 14px;
    color: #8a6d3b;

    border-color: #faebcc;
    background-color: #fcf8e3;
}

.alert-error {
    color: #a94442;

    border-color: #ebccd1;
    background-color: #f2dede;
}

.alert-success {
    color: #3c763d;

    border-color: #d6e9c6;
    background-color: #dff0d8;
}


body.page-media-browser {
    overflow-y: scroll;
}

.media-modal-frame {
    height: 800px!important;
}

